# SimpleDPI

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  autovcpkg.cmake  main.cpp
.devcontainer/: Dockerfile
.github/actions/: release.yml
.github/workflows/: main.yml
